Refactored caption panel in web-client (to get rid of absolute positioning) + some small fixes Support single auto stretched borders for "named" containers (closes #665)

--- a/web-client/src/main/java/lsfusion/gwt/public/static/css/MainFrame.css
+++ b/web-client/src/main/java/lsfusion/gwt/public/static/css/MainFrame.css
@@ -281,6 +281,12 @@ input[type=checkbox]:focus {
     border-radius: var(--button-border-radius);
 }
 
+button {
+    border-radius: var(--button-border-radius);
+    background: var(--component-background-color);
+    border: 1px solid var(--component-border-color); /* should correspond to the result in ActionOrPropertyValue.setBaseSize */
+}
+
 .panelRendererValueFocused, button:focus {
     background-color: var(--selection-color);
     border: 1px solid var(--focus-color);
@@ -326,22 +332,37 @@ input[type=checkbox]:focus {
     position: relative;
 }
 
+.captionLegendContainerPanel {
+    position: relative;
+}
 .captionPanelLegend {
-    position: absolute;
-    top: -0.75em;
-
-    left: 4px;
-    padding: 0 4px;
-
     white-space: nowrap;
     background-color: var(--background-color);
     color: var(--caption-panel-legend-color);
 }
 
-/* uneven because there are margins from top and bottom */
-.captionPanelNotEmptyLegend {
-    margin-top: 0.75em;
-    padding-top: 0.75em;
+.notNullCaptionPanelLegend {
+    padding-top: var(--border-padding);
+    padding-bottom: var(--border-padding);
+}
+
+.notEmptyCaptionPanelLegend {
+    margin-left: 4px;
+    margin-right: 4px;
+
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+.captionCenteredLine {
+    position: absolute;
+    top : 50%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+
+    border-top: 1px solid var(--panel-border-color);
 }
 
 /* ------------ Navigator windows  ------------ */
@@ -678,7 +699,11 @@ input[type=checkbox]:focus {
 }
 
 .gridToolbarContainerPanel {
-    /*margin: var(--border-padding);*/
+    margin-top: var(--border-padding);
+    margin-bottom: var(--border-padding);
+}
+
+.toolbarButtonNoBorder {
 }
 
 .toolbarButton {
@@ -698,7 +723,8 @@ input[type=checkbox]:focus {
 
 .toolbarItem {
     /*margin: 0 4px 0 0;*/
-    margin: var(--border-padding);
+    margin-left: var(--border-padding);
+    margin-right: var(--border-padding);
 }
 
 .logPanel {
